DeforaOS/Apps/Servers/src/inetd/src/GRAMMAR
config:		{ newline } service_list { newline }

newline: 	[ space ] NEWLINE

space:		SPACE { SPACE }

service_list:	{ service { newline } }

service:	service_name space socket space protocol space wait space
		id space program newline

service_name:	WORD

socket:		"stream" | "dgram"

protocol:	"tcp" | "udp"

wait:		"wait" | "nowait"

id:		user [ "." group ]

user:		NUMBER | WORD

group:		NUMBER | WORD

program:	program_name [ space program_argument_list ]

program_name:	WORD

program_argument_list:	WORD [ space program_argument ]
